// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test suite for GifExpertApp should match snapshot 1`] = `
<Fragment>
  <h2>
    GiftExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <ol />
</Fragment>
`;

exports[`Test suite for GifExpertApp should render a category list 1`] = `
<Fragment>
  <h2>
    GiftExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <ol>
    <GifGrid
      category="matrix"
      key="matrix"
    />
    <GifGrid
      category="leon"
      key="leon"
    />
  </ol>
</Fragment>
`;
